Added basic contact form

--- a/webapp/layouts/partials/footer.html
+++ b/webapp/layouts/partials/footer.html
@@ -11,6 +11,7 @@
     M+ V PS PE Y+ PGP t+ 5? X+ R tv- b+ DI- D++ G e++ h++ r++ z<br/>
     ------END GEEK CODE BLOCK------
 </p>
+{{ if eq .Title "Say hello" }}{{ partial "js_contact.html" . }}{{ end }}
 {{ partial "js.html" . }}
 </body>
 </html>
