--- a/webapp/layouts/partials/header.html
+++ b/webapp/layouts/partials/header.html
@@ -16,6 +16,7 @@
     <a href="/knowledge">Stuff I forget</a> -
     <a href="/coolstuff">Cool Stuff</a> -
     <a href="/projects">Projects</a> -
-    <a href="/dogs">My dogs</a>
+    <a href="/dogs">Dogs</a>  -
+    <a href="/contact">Contact</a>
 </nav>
 <main>
